--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
 	<body>
 	<div class="container" ng-controller="AppCtrl">
-		<h1>This is my app</h1>
+		<h1>Contact App</h1>
 
 		<table class="table">
 			<thead>
@@ -31,7 +31,8 @@
 					<td><input class="form-control" ng-model="contact.email"></td>
 					<td><input class="form-control" ng-model="contact.number"></td>
 					<td><button class="btn btn-primary" ng-click="addContact()">Add</td>
-					<td><button class="btn btn-info" ng-click="update()">Update</button></td>
+					<td><button class="btn btn-info" ng-click="update()">Update</button>
+						&nbsp;&nbsp;<button class="btn btn-info" ng-click="deselect()">Clear</button></td>
 				</tr>
 				<tr ng-repeat="contact in contactlist">
 					<td>{{contact.name}}</td>
